ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
    #annotations:
    #   traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik
  rules:
    - host: webapp.szanetwork.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-webapp
                port:
                  number: 80
    - host: traefik.szanetwork.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
